--- a/src/components/Favorite/Favorite.scss
+++ b/src/components/Favorite/Favorite.scss
@@ -1,4 +1,5 @@
 @import '../../styles/breakpoints.scss';
+@import '../../styles/colors.scss';
 
 .favorite {
     &__button-container{
@@ -8,5 +9,23 @@
         &__button-container{
             width: 100%;
         }
+    }
+}
+.buttons-container-nav {
+    display: flex;
+    flex-direction: column;
+    &__btn-home {
+        width: 400px;
+        border-radius: 8px;
+        margin-top: 22px;
+        font-size: 18px;
+    }
+    &__btn-label {
+        margin: 17px 0px;
+    }
+    @media (max-width: map-get($breakpoints, md)) {
+    &__btn-home{
+        width: 100%;
+    }
     }
 }
